--- a/portfolio-details_5.html
+++ b/portfolio-details_5.html
@@ -22,6 +22,31 @@
 
   <!-- Template Main CSS File -->
   <link href="css/style.css" rel="stylesheet">
+   <style>
+    body {
+      font-family: Arial, sans-serif;
+      max-width: 900px;
+      margin: auto;
+      padding: 2rem;
+      background-color: #f9f9f9;
+      color: #1a1a1a;
+      line-height: 1.6;
+    }
+    h1, h2, h3 {
+      color: #2c3e50;
+    }
+    .section {
+      background: #ffffff;
+      padding: 1.5rem;
+      margin-bottom: 2rem;
+      border-radius: 10px;
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+    }
+    ul {
+      margin-left: 1.2rem;
+    }
+  </style>
+
 </head>
 
 <body>
@@ -31,8 +56,16 @@
     <!-- ======= Portfolio Details Section ======= -->
     <section id="portfolio-details" class="portfolio-details">
       <div class="container">
+        <h1>DP World – Container Tracking & Admin Tool (UX Case Study)</h1>
+        <br>
 
-        <div class="row gy-4">
+  <div class="section">
+    <h2>Project Overview</h2>
+    <p>
+      The DP World Tool was designed to streamline container logistics, employee tracking, and admin operations for terminal teams. It brings real-time visibility and operational control to admins managing container offloading, truck assignment, sales data, and workforce performance.
+    </p>
+  </div>
+         <div class="row gy-4">
 
           <div class="row">
             <div class="portfolio-details-slider swiper">
@@ -46,69 +79,91 @@
               <div class="swiper-pagination"></div>
             </div>
           </div>
-
-          <div class="row">
-            <div class="portfolio-info">
-              <h3>Project information</h3>
-              <ul>
-                <li><strong>Category</strong>: Web design</li>
-                <li><strong>Client</strong>: DP World</li>
-              </ul>
-            </div>
-            <div class="portfolio-description">
-              <h2>About Projects</h2>
-              <p>
-               Title: DP World</p>
-<img src="img/portfolio/Picture 1.png" alt="UX workflow" style="width: 50%"/>
-<p><b>Problem Statement:</b></p>
-
-<p>In this use case study, I have to work on DP World Tool in which we have to create a tool that help to track and collect/maintain information of the containers off loaded from ship and loaded on trucks for further destination within India. The goal of DP world project ux design is to apply enhanced user experience and create a better overall DP world tool for the staff/Admin user experience to track the live status of the truck,sales, order created , Employee attendance and admin setting for configuring the tool features.</p>
-<p><b>Requirements:</b></p>
-
-<p>
-In order to design a DP world ux design, we need to understand the requirements of the staff/admin like what are the feature they planned or want as a tool to enhance their productivity in minimal efforts and with more security. This includes understanding what needs to be improved/implemented w.r.t to implement or integrate various APIs that need to be intgrated at the platform that have unique feature or operation to perform
-
-We have requirements like
-<ol>
-<li>Need to create dashboard that shows real time data of the sales monthly wise as well as yearly wise according to the filter set by admin and total revenue</li>
-<li>Need to create order creation forms in order ot raise the order and that form have pre-requisites fields with mandatory fields</li>
-<li>Gather employee attendance data on the tool via punching machine data ,so need to show the same data in datatables and record the best performer and worst performer on the basis of attendance and order creation as well as sales done</li>
-<li>Need to show data of the container movement from offloaded to reaching the desired destination</li>
-</ol>
-<p><b>User research:</b></p>  
-<p>
-User research is essential for understanding the needs of staff/Admins. This involves interviewing various staff and observing how they interact with the system ,under which age group they falls ,how much technical sounds they were, what are the problems they usually face, how they tackle the same during peak time. We want to know what are the things they need to track on regular basis and which information is crucial.
-
-The methods we used were:
-<ol>
-<li>Competitive Analysis</li>
-<li>Surveys</li>
-<li>User Interviews</li>
-<li>Persona Development</li></ol>
-</p>
-<p>
-For interview i interview future admins/reponsible person of the application and gather data like How many APIs we have, how many sensor are there, how they want data to be maintained. how they want data to be represented, filtered, what are the data that need to do analytics to show the same in more creative and unique way for better user experience.</p>
-<p>
-<b>Ideation & testing</b>
-</p>
-<p>
-I sketched ideas of how the Dashboard,live tracking ,gate information feature for Aviation project should look. Then created low fidelity wireframes and finally, high fidelity wireframes that incorporated the look and feel of Aviation project.I went through three rounds of testing; at each step of the design process i created a clickable prototype to test our ideas, obtained feedback from potential customers and iterated our design.
-</p>
-  <p>
-  <b>User Interface Design</b>
-  </p>
-  <p>
-  Once i have a good understanding of the user needs, it's time to design the user interface. I need to create a user interface that is easy to use,provides a good user experience, have accessiblity,usablity,consitency in information flow, color theory should be aligned to company standard. I also need to make user interface for admins/staff who gonna track the data or use the data and maintained the live data as well as analysis the same.
-
-As a team contributor form Noida designing team for the web development i worked on deisgning the wireframe from low fidelity to high fidelity from doing requirement gathering to user research and analysis the data with a team of 3 designer and i lead the designer team for the prototyping. Following proces in agile and in iterative way i used to do designing in iteration wise and take the feedback from the stakeholder(airport staff) and the product owner of the application  </p>
-  <b>Tools used</b>
-  <p>
-  Figma App
-  </p>
-            </div>
-          </div>
-
         </div>
+
+  <div class="section">
+    <h2>Problem Statement</h2>
+    <p>
+      Lack of centralized visibility into container movement, employee attendance, and sales performance created confusion and inefficiency. The goal was to deliver a digital dashboard that merged operations, data tracking, and reporting in one seamless interface.
+    </p>
+  </div>
+
+  <div class="section">
+    <h2>Key Requirements</h2>
+    <ul>
+      <li>Live dashboard of monthly/yearly sales and total revenue with filtering.</li>
+      <li>Order creation forms with validation and prerequisites.</li>
+      <li>Punch-based employee attendance tracking + analytics.</li>
+      <li>Live container journey tracking (offloaded to final destination).</li>
+    </ul>
+  </div>
+
+  <div class="section">
+    <h2>User Research</h2>
+    <p>
+      We interviewed future DP World staff and admins to understand their daily workflows, bottlenecks, and data needs. Insights were synthesized through:
+    </p>
+    <ul>
+      <li>Competitive Benchmarking</li>
+      <li>Surveys of internal staff</li>
+      <li>User Interviews (port operations, IT admins)</li>
+      <li>Persona Development</li>
+    </ul>
+    <p>
+      This helped prioritize features such as pre-filled order forms, automated best-performer scoring, and filterable datatables across views.
+    </p>
+    <br>
+<img src="images/dpworld_user_research_chart.png" alt="User research chart">
+  </div>
+
+  <div class="section">
+    <h2>User Persona: Rakesh Yadav</h2>
+    <p><strong>Age:</strong> 42 &nbsp; <strong>Role:</strong> Operations Manager, Port Admin</p>
+     <img src="images/user persona_DP world.png" alt="DP World User Persona">
+    <img src="images/user persona_2_DP world.png" alt="DP World User Persona">
+  </div>
+
+  <div class="section">
+    <h2>Information Architecture</h2>
+    <ul>
+      <li><strong>Dashboard</strong>: Live sales, revenue, employee stats</li>
+      <li><strong>Order Management</strong>: Form builder, validation, approval</li>
+      <li><strong>Container Tracking</strong>: Journey map, filter by zone/status</li>
+      <li><strong>Employee Tracker</strong>: Punch logs, performance leaderboard</li>
+      <li><strong>Admin Settings</strong>: API configs, access control, reports</li>
+    </ul>
+    <br>
+<img src="images/dpworld_IA.png" alt="IA Diadram">
+  </div>
+
+  <div class="section">
+    <h2>UX Process & Testing</h2>
+    <p>
+      Our design team (3 members) collaborated in Figma, iterating across low and high fidelity wireframes. Clickable prototypes were tested in three cycles with operations staff. Key test metrics included:
+    </p>
+    <ul>
+      <li>Form completion time</li>
+      <li>KPI visibility and comprehension</li>
+      <li>Navigation clarity for non-technical users</li>
+    </ul>
+  </div>
+
+  <div class="section">
+    <h2>Final UI Design Highlights</h2>
+    <ul>
+      <li>Color-coded indicators for performance and shipment status</li>
+      <li>Grid views with Excel-like filtering for all major tables</li>
+      <li>Compact, scroll-free dashboard layout with tabs</li>
+    </ul>
+  </div>
+
+  <div class="section">
+    <h2>✅ Conclusion</h2>
+    <p>
+      The DP World Tool improved visibility, decision-making, and admin control across operations. By automating reporting, enabling live tracking, and integrating API touchpoints, we delivered a seamless solution that’s now being scaled to more ports.
+    </p>
+  </div>
+
 
       </div>
     </section><!-- End Portfolio Details Section -->
