--- a/portfolio-details_7.html
+++ b/portfolio-details_7.html
@@ -60,6 +60,12 @@
 
     <!-- ======= Portfolio Details Section ======= -->
     <section id="portfolio-details" class="portfolio-details">
+      <div class="section">
+    <h2>📄 Project Overview</h2>
+    <p>
+      The COST tool was designed to replace Turbonomics, offering a customizable, cost-effective in-house solution to help enterprises track, analyze, and optimize Azure cloud resource consumption. Using Microsoft Azure APIs, it provides machine-level analytics, savings recommendations, and decision support.
+    </p>
+  </div>
       <div class="container">
         <div class="section">
     <h2> Project Overview</h2><br>
