--- a/portfolio-details_5.html
+++ b/portfolio-details_5.html
@@ -113,14 +113,14 @@
       This helped prioritize features such as pre-filled order forms, automated best-performer scoring, and filterable datatables across views.
     </p>
     <br>
-<img src="images/dpworld_user_research_chart.png" alt="User research chart">
+<img src="img/dpworld_user_research_chart.png" alt="User research chart">
   </div>
 
   <div class="section">
     <h2>User Persona: Rakesh Yadav</h2>
     <p><strong>Age:</strong> 42 &nbsp; <strong>Role:</strong> Operations Manager, Port Admin</p>
-     <img src="images/user persona_DP world.png" alt="DP World User Persona">
-    <img src="images/user persona_2_DP world.png" alt="DP World User Persona">
+     <img src="img/user persona_DP world.png" alt="DP World User Persona">
+    <img src="img/user persona_2_DP world.png" alt="DP World User Persona">
   </div>
 
   <div class="section">
