--- a/portfolio-details_5.html
+++ b/portfolio-details_5.html
@@ -112,15 +112,17 @@
     <p>
       This helped prioritize features such as pre-filled order forms, automated best-performer scoring, and filterable datatables across views.
     </p>
-    <br>
-<img src="img/dpworld_user_research_chart.png" alt="User research chart">
+     <div class="row gy-4">
+<img src="img/dpworld_user_research_chart.png" alt="User research chart"></div>
   </div>
 
   <div class="section">
     <h2>User Persona: Rakesh Yadav</h2>
     <p><strong>Age:</strong> 42 &nbsp; <strong>Role:</strong> Operations Manager, Port Admin</p>
+     <div class="row gy-4">
      <img src="img/user persona_DP world.png" alt="DP World User Persona">
     <img src="img/user persona_2_DP world.png" alt="DP World User Persona">
+     </div>
   </div>
 
   <div class="section">
@@ -157,7 +159,7 @@
   </div>
 
   <div class="section">
-    <h2>✅ Conclusion</h2>
+    <h2>Conclusion</h2>
     <p>
       The DP World Tool improved visibility, decision-making, and admin control across operations. By automating reporting, enabling live tracking, and integrating API touchpoints, we delivered a seamless solution that’s now being scaled to more ports.
     </p>
